@@ -1,4 +1,7 @@
-- memory leaks fixed for nc rings (trac 213)
+- structs.h: smpoly moved to sparsemat.cc, 
+             tHomog moved to ring.h, 
+	     Exponent_t removed
+- memory leaks fixed for nc rings (trac 214)
 - documentation updates: primdec.lib, PLURAL
 - new lib: surfsig.lib (renamed from signature.lib)
 - memory leaks fixed: nlGcd, nc_ReduceSpolyNew
